simple refactor - part 2